welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  baisseBrosse()
  avance(2)
  gauche()
}

dogHouse(2)

